--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -29,7 +28,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#blog">Blog</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">Contact Me</a></li>
       </ul>
       <!-- Light/Dark Mode Toggle -->
       <button id="mode-toggle" class="mode-toggle">🌙</button>
@@ -54,7 +53,7 @@
       <section id="about">
         <h2>About Me</h2>
         <p>
-          I'm an Information Systems university student with a passion for frontend development and UI/UX design. I love creating websites that are both beautiful and functional using tools like HTML, CSS, and JavaScript.
+          I'm an Information Systems student with a passion passionate about web development and creative design. I enjoy turning ideas into modern, user-friendly websites. Alongside coding, I love artistry—whether it's designing visually appealing interfaces or exploring digital art. 
           <br><br>I look forward to contributing to impactful projects and continuing to master and polish my skills.
         </p>
       </section>
