profile image link updated

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="#projects" class="cta-button">View Projects</a>
             </div>
             <div class="profile-photo">
-                <img src="my profile.jpg" alt="My profile picture"
+                <img src="my profile.jpg">
         </div>
         </div>
     </section>
