--- a/index.html
+++ b/index.html
@@ -137,8 +137,14 @@
             <h3>Simon Game Challenge</h3>
             <p>A simple project created with HTML, CSS and Javascript.</p>
           </div>
+
           <div class="project" onclick="openProjectModal('project2')">
             <h3>Project Two</h3>
+            <p>Short description of the project.</p>
+          </div>
+
+          <div class="project" onclick="openProjectModal('project3')">
+            <h3>Project Three</h3>
             <p>Short description of the project.</p>
           </div>
         </div>
