blog section Dev diaries content changed

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <article class="blog-post">
           <h3>Dev Diaries</h3>
           <p class="date">January 1, 2025</p>
-          <p class="excerpt">To be started yet...</p>
+          <p class="excerpt">To be started...</p>
           <a href="#post1">Read More</a>
         </article>
         <article class="blog-post">
@@ -189,6 +189,8 @@
           <li>Web Development</li>
           <li>UI/UX Design</li>
           <li>Freelance Projects</li>
+          <li>Responsive Web Design</li>
+          <li>Blog Content Writing</li>
         </ul>
       </section>
 
@@ -196,7 +198,7 @@
       <section id="contact">
         <h2>Get in Touch</h2>
         <form id="contact-form">
-          <input type="text" id="name" placeholder="Your Name" required />
+          <input type="text" id="name" placeholder="Name" required />
           <input type="email" id="email" placeholder="Email" required />
           <textarea id="message" placeholder="Message" required></textarea>
           <button type="submit">Send Message</button>
