--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
 
   <body class="dark-mode">
@@ -222,9 +223,9 @@
       <!-- Footer -->
       <footer>
         <div class="socials">
-          <a href="#" aria-label="GitHub">GitHub</a>
-          <a href="#" aria-label="LinkedIn">LinkedIn</a>
-          <a href="mailto:your@email.com" aria-label="Email">Email</a>
+          <a href="https://github.com/iamyosh" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/yoshadhi-edirisinghe-a9b831312/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="mailto:yoshediringhe28@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
         </div>
         <p>© <span id="year"></span> Yoshadhi Edirisinghe. All rights reserved.</p>
       </footer>
