cv button added in the home section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="home-text">
         <h1>Hi, I'm Yoshadhi Edirisinghe</h1>
         <p>A passionate university student interested in building modern web apps</p>
-        <a href="#projects" class="cta-button">View Projects</a>
+        <a href="#cv" class="cta-button">Download CV</a>
             </div>
             <div class="profile-photo">
                 <img src="my profile.jpg">
