--- a/index.html
+++ b/index.html
@@ -17,19 +17,27 @@
 
     <!-- Mobile Navigation -->
     <nav>
+      <div class="logo">
+        <a href="#home">
+          <span class="logo-port">Port</span>
+          <span class="logo-folio">folio</span>
+        </a>
+      </div>
+
       <div class="menu-icon" id="menu-icon">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
+
       <ul id="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact Me</a></li>
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#about">ABOUT ME</a></li>
+        <li><a href="#skills">SKILLS</a></li>
+        <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#blog">BLOG</a></li>
+        <li><a href="#services">SERVICES</a></li>
+        <li><a href="#contact">CONTACT ME</a></li>
       </ul>
       <!-- Light/Dark Mode Toggle -->
       <button id="mode-toggle" class="mode-toggle">🌙</button>
