--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="#cv" class="cta-button">Download CV</a>
             </div>
             <div class="profile-photo">
-                <img src="myprofile.jpg" alt="profile photo" class="profile-img">
+                <img src="profile.png" alt="profile photo" class="profile-img">
         </div>
         </div>
     </section>
