--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="home-text">
         <h1>Hi, I'm Yoshadhi Edirisinghe</h1>
         <p>A passionate university student interested in building modern web apps</p>
-        <a href="#cv" class="cta-button">Download CV</a>
+        <a href="CV.pdf" alt="my cv" target="_blank" class="cta-button">View CV</a>
             </div>
             <div class="profile-photo">
                 <img src="profile.png" alt="profile photo" class="profile-img">
@@ -77,7 +77,7 @@
           <li><span class="skill-name">JavaScript</span></li>
           <li><span class="skill-name">React js</span></li>
           <li><span class="skill-name">Responsive Design</span></li>
-          <li><span class="skill-name">C language</span></li>
+          <li><span class="skill-name">Figma</span></li>
         </ul>
         <br><br>
 
