--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
           </div>
 
           <div class="project" onclick="openProjectModal('project2')">
-            <h3>Project Two</h3>
-            <p>Short description of the project.</p>
+            <h3>Enhanced Color Picker Application</h3>
+            <p>A unique Color Picker Application created with React js which includes advanced functionalities.</p>
           </div>
 
           <div class="project" onclick="openProjectModal('project3')">
