blog changes made

--- a/index.html
+++ b/index.html
@@ -163,17 +163,19 @@
       <section id="blog">
         <h2>Blog</h2>
         <article class="blog-post">
+          <h3>MiNd LoGs</h3>
+          <p class="date">May 15, 2025</p>
+          <p class="excerpt">“A personal collection of reflective articles where I explore life through the lens of curiosity, growth, and quiet observation. Each piece captures my thoughts, insights, and the subtle patterns I find in everyday experiences. Written with honesty, not authority.”</p>
+          
+          <p class="excerpt">Check them out!!!</p><br>
+          <a href="https://medium.com/@yoshedirisinghe" alt="medium profile" target="_blank">Click to check my Medium profile</a>
+        </article>
+
+        <article class="blog-post">
           <h3>Dev Diaries</h3>
           <p class="date">January 1, 2025</p>
           <p class="excerpt">To be started...</p>
           <a href="#post1">Read More</a>
-        </article>
-        <article class="blog-post">
-          <h3>Thoughts & Writings</h3>
-          <p class="date">February 15, 2025</p>
-          <p class="excerpt">“I occasionally write about what I learn, build, or explore in the world of tech and beyond.”
-            ...</p>
-          <a href="#post2">Read More</a>
         </article>
       </section>
 
