--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       <!-- Home Section -->
       <section id="home">
         <div class="home-content">
-            <div class="home-text">
+          <body class="overlay" style="background-image: url(background.jpg);">
+          <div class="hero-section">
+          <div class="home-text">
         <h1>Hi, I'm Yoshadhi Edirisinghe</h1>
         <p>A passionate university student interested in building modern web apps</p>
         <a href="CV.pdf" alt="my cv" target="_blank" class="cta-button">View CV</a>
@@ -56,6 +58,7 @@
                 <img src="profile.png" alt="profile photo" class="profile-img">
         </div>
         </div>
+        </>
     </section>
 
       <!-- About Me -->
