--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="profile.png" alt="profile photo" class="profile-img">
         </div>
         </div>
-        </>
+      </div>
     </section>
 
       <!-- About Me -->
