toggle mode button removed

--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
         <li><a href="#contact">CONTACT ME</a></li>
       </ul>
       <!-- Light/Dark Mode Toggle -->
-      <button id="mode-toggle" class="mode-toggle">🌙</button>
+      <!-- <button id="mode-toggle" class="mode-toggle">🌙</button> -->
     </nav>
 
     <div id="root">
       <!-- Home Section -->
       <section id="home">
         <div class="home-content">
-          <body class="overlay" style="background-image: url(background.jpg);">
           <div class="hero-section">
           <div class="home-text">
         <h1>Hi, I'm Yoshadhi Edirisinghe</h1>
